--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "codespotlight": {
+    "oss-codespotlight": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -71,10 +71,10 @@
           "builder": "@angular-devkit/build-angular:dev-server",
           "configurations": {
             "production": {
-              "buildTarget": "codespotlight:build:production"
+              "buildTarget": "oss-codespotlight:build:production"
             },
             "development": {
-              "buildTarget": "codespotlight:build:development"
+              "buildTarget": "oss-codespotlight:build:development"
             }
           },
           "defaultConfiguration": "development"
